Added functionality to login button on landing page

--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -1,7 +1,7 @@
    
    {{!-- Landing Page/Submit/Login buttons --}}
     <div class="position-absolute top-30 start-50 translate-middle">
-        <button type="button" class="btn btn-primary btn-lg">Login</button>
-        <button type="button" class="btn btn-primary btn-lg">Sign Up</button>
+        <button type="button" class="btn btn-primary btn-lg" id="loginBtn">Login</button>
+        <button type="button" class="btn btn-primary btn-lg" id="signUpBtn">Sign Up</button>
     </div>
    
