--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,10 @@
 <header>
         <!-- title -->
     </header>
-    <div class="container">
-      <img class="photo" src="/photos/loginBackgroundImg.jpg" alt="gaming image, headphones, keyboard and mouse">
+<div class="container">
+      
       <div class="card">
+        
         <h2>GG WP HF GL</h2>
         <form method="POST">
           <div class="input-group">
@@ -13,11 +14,26 @@
           <div class="input-group">
             <label for="password">Password</label>
             <input type="password" name="password" id="password" placeholder="Enter Password Here" />
-            <div>Don't have an accout? CLICK HERE</div>
+            </div>
+          <div class="remember-forgot">
+            <label><input type="checkbox"> Remember me</label>
+              <a href="#">Forgot password?</a>
+          </div>  
+
+          <button type="submit" class="btn"></button>
+          <div class="login-register">
+            <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
           </div>
+
+
           <div id="msg"></div>
           <button id="sign-up">Login</button>
         </form>
       </div>
     </div>
+    
+  
+    <script src=""></script>
+  </body>
+</html>
     
