--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
-HEAD
-*,
+HEAD *,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -25,7 +24,8 @@ p {
 }
 
 button {
-  background-color:#001b44;;
+  background-color: #001b44;
+  ;
   border-radius: 8px;
   color: #fafafa;
   cursor: pointer;
@@ -130,7 +130,8 @@ input:hover {
 }
 
 #msg.success {
-  color: #001b44;;
+  color: #001b44;
+  ;
 }
 
 #msg.error {
@@ -142,11 +143,13 @@ input:hover {
 /* SignIn / Login buttons */
 button.btn.btn-primary.sidebar {
   margin-top: 90%;
- 
+
 }
+
 .position-absolute.top-0.start-20.translate-middle {
   margin-left: 45px;
 }
+
 .position-absolute.top-30.start-50.translate-middle {
   border: groove;
   padding-bottom: 10px;
@@ -155,10 +158,12 @@ button.btn.btn-primary.sidebar {
   background-color: silver;
   z-index: 100;
 }
+
 .sidebar {
-margin-top: 20px;
+  margin-top: 20px;
 
 }
+
 button.btn.btn-primary.btn-lg {
   margin-right: 10px;
   margin-left: 10px;
@@ -166,42 +171,43 @@ button.btn.btn-primary.btn-lg {
   border: groove;
   color: black;
 }
+
 button.btn.btn-primary.btn-lg:hover {
-  background-color:#737474;
+  background-color: #737474;
 }
 
 /* SVG BACKGROUND */
 body {
   background: -moz-linear-gradient(45deg, #02e1ba 0%, #12272d 29%, #24f211 66%, #ffa079 100%);
-  background: -webkit-linear-gradient(45deg, #02e1ba 0%,#26c9f2 29%,#d911f2 66%,#ffa079 100%);
-  background: linear-gradient(45deg, #02e1ba 0%,#26c9f2 29%,#d911f2 66%,#ffa079 100%);
+  background: -webkit-linear-gradient(45deg, #02e1ba 0%, #26c9f2 29%, #d911f2 66%, #ffa079 100%);
+  background: linear-gradient(45deg, #02e1ba 0%, #26c9f2 29%, #d911f2 66%, #ffa079 100%);
   background-size: 400% 400%;
   -webkit-animation: Gradient 15s ease infinite;
--moz-animation: Gradient 15s ease infinite;
-animation: Gradient 15s ease infinite;
-min-height: calc(100vh - 2rem);
-display: flex;
-flex-direction: column;
-align-items: stretch;
-justify-content: space-evenly;
-overflow: hidden;
-position: relative; 
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
+  min-height: calc(100vh - 2rem);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-evenly;
+  overflow: hidden;
+  position: relative;
 }
 
-body::before, 
+body::before,
 body::after {
-content: "";
-width: 70vmax;
-height: 70vmax;
-position: absolute;
-background: rgba(255, 255, 255, 0.07);
-left: -20vmin;
-top: -20vmin;
-animation: morph 15s linear infinite alternate, spin 20s linear infinite;
-z-index: 1;
-will-change: border-radius, transform;
-transform-origin: 30% 30%;
-pointer-events: none; 
+  content: "";
+  width: 70vmax;
+  height: 70vmax;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.07);
+  left: -20vmin;
+  top: -20vmin;
+  animation: morph 15s linear infinite alternate, spin 20s linear infinite;
+  z-index: 1;
+  will-change: border-radius, transform;
+  transform-origin: 30% 30%;
+  pointer-events: none;
 }
 
 body::after {
@@ -212,77 +218,139 @@ body::after {
   top: auto;
   bottom: 0;
   animation: morph 10s linear infinite alternate, spin 26s linear infinite reverse;
-  transform-origin: 10% 10%; 
+  transform-origin: 10% 10%;
 }
 
 @-webkit-keyframes Gradient {
-0% {
-  background-position: 0 50%
-}
-50% {
-  background-position: 100% 50%
-}
-100% {
-  background-position: 0 50%
-}
+  0% {
+    background-position: 0 50%
+  }
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0 50%
+  }
 }
 
 @-moz-keyframes Gradient {
-0% {
-  background-position: 0 50%
-}
-50% {
-  background-position: 100% 50%
-}
-100% {
-  background-position: 0 50%
-}
+  0% {
+    background-position: 0 50%
+  }
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0 50%
+  }
 }
 
 @keyframes Gradient {
-0% {
-  background-position: 0 50%
-}
-50% {
-  background-position: 100% 50%
-}
-100% {
-  background-position: 0 50%
-}
+  0% {
+    background-position: 0 50%
+  }
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0 50%
+  }
 }
 
 @keyframes morph {
-0% {
-  border-radius: 40% 60% 60% 40% / 70% 30% 70% 30%; }
-100% {
-  border-radius: 40% 60%; } 
+  0% {
+    border-radius: 40% 60% 60% 40% / 70% 30% 70% 30%;
+  }
+
+  100% {
+    border-radius: 40% 60%;
+  }
 }
 
 @keyframes spin {
-to {
-  transform: rotate(1turn); 
-} 
+  to {
+    transform: rotate(1turn);
+  }
 }
-.st0{display:none;}
-.st1{display:inline;}
-.st2{opacity:0.29;}
-.st3{fill:#FFFFFF;}
-.st4{clip-path:url(#SVGID_2_);fill:#FFFFFF;}
-.st5{clip-path:url(#SVGID_4_);}
-.st6{clip-path:url(#SVGID_6_);}
-.st7{clip-path:url(#SVGID_8_);}
-.st8{clip-path:url(#SVGID_10_);}
-.st9{fill:none;}
-.st10{clip-path:url(#SVGID_12_);}
-.st11{opacity:0.7;}
-.st12{clip-path:url(#SVGID_14_);}
-.st13{opacity:0.2;}
-.st14{clip-path:url(#SVGID_16_);}
-.st15{opacity:0.3;fill:#FFFFFF;enable-background:new    ;}
+
+.st0 {
+  display: none;
+}
+
+.st1 {
+  display: inline;
+}
+
+.st2 {
+  opacity: 0.29;
+}
+
+.st3 {
+  fill: #FFFFFF;
+}
+
+.st4 {
+  clip-path: url(#SVGID_2_);
+  fill: #FFFFFF;
+}
+
+.st5 {
+  clip-path: url(#SVGID_4_);
+}
+
+.st6 {
+  clip-path: url(#SVGID_6_);
+}
+
+.st7 {
+  clip-path: url(#SVGID_8_);
+}
+
+.st8 {
+  clip-path: url(#SVGID_10_);
+}
+
+.st9 {
+  fill: none;
+}
+
+.st10 {
+  clip-path: url(#SVGID_12_);
+}
+
+.st11 {
+  opacity: 0.7;
+}
+
+.st12 {
+  clip-path: url(#SVGID_14_);
+}
+
+.st13 {
+  opacity: 0.2;
+}
+
+.st14 {
+  clip-path: url(#SVGID_16_);
+}
+
+.st15 {
+  opacity: 0.3;
+  fill: #FFFFFF;
+  enable-background: new;
+}
+
 .waviy {
   position: relative;
-  }
-  .waviy span {
+}
+
+.waviy span {
   position: relative;
   display: inline-block;
   font-size: 40px;
@@ -290,14 +358,18 @@ to {
   text-transform: uppercase;
   animation: flip 2s infinite;
   animation-delay: calc(.2s * var(--i))
+}
+
+@keyframes flip {
+
+  0%,
+  80% {
+    transform: rotateY(360deg)
   }
-  @keyframes flip {
-  0%,80% {
-    transform: rotateY(360deg) 
-  }
-  }
-  /* Dashboard CSS */
-  button.btn.btn-primary.sidebar {
+}
+
+/* Dashboard CSS */
+/* button.btn.btn-primary.sidebar {
     margin-top: 90%;
     margin-left: 100%;
     z-index: 100;
@@ -317,4 +389,6 @@ h2.dashboard {
 }
 .latestTitle, .posts {
     text-align: center;
-}
+} */
+
+/* Trung */
