./controller code refactor/ modulurized ./public/js folder

--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -4,4 +4,6 @@
         <button type="button" class="btn btn-primary btn-lg" id="loginBtn">Login</button>
         <button type="button" class="btn btn-primary btn-lg" id="signUpBtn">Sign Up</button>
     </div>
+
+    <script src="/js/landingNavigation.js"></script>
    
