--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
       <div class="card">
         
         <h2>GG WP HF GL</h2>
-        <form method="POST">
+        <form id="login-form">
           <div class="input-group">
             <label for="email">Email</label>
             <input type="text" name="email" id="email" placeholder="Enter Email Here" />
@@ -25,13 +25,13 @@
 
 
           <div id="msg"></div>
-          <button id="sign-up">Login</button>
+          <button type="submit" id="sign-up">Login</button>
         </form>
       </div>
     </div>
     
   
-    <script src=""></script>
+    <script src="/js/login.js"></script>
   </body>
 </html>
     
