feature/Added user create account feature

--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -2,7 +2,7 @@
         <div class="card2">
 
         <h2>Sign Up</h2>
-        <form method="POST">
+        <form>
           <div class="input">
             <label for="email">Email</label>
             <input type="text" name="email" id="email" placeholder="example@mail.com" />
@@ -10,7 +10,7 @@
           
           <div class="input">
             <label for="email">Username</label>
-            <input type="text" name="email" id="email" placeholder="gamer123" />
+            <input type="text" name="email" id="username" placeholder="gamer123" />
           </div>
 
           
@@ -29,5 +29,6 @@
             <div>TW</div>
         </div>
       </div>
+      <script src="/js/signUp.js"></script>
   </body>
 </html> 
