--- a/public/css/style.css
+++ b/public/css/style.css
@@ -392,3 +392,32 @@ h2.dashboard {
 } */
 
 /* Trung */
+
+h3{
+  text-align: center;
+  margin: 20px;
+}
+
+.col{
+  border-style: ridge;
+  border-color: 	#808080;
+  border-width: 1px;
+  border-spacing: 0;
+}
+
+.col-10{
+  border-style: ridge;
+  border-color: 	#808080;
+  border-width: 1px;
+  border-spacing: 0;
+}
+
+#group_name{
+  background-color: #eceff1;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+#post_button{
+  margin: 30px;
+}
