added post route for clanroutes.js

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,8 +23,16 @@
     <div class="row">
 
       <!-- Chat -->
+      {{#each clan as |clan| }}  
       <div id="chat" class="col-10">
         <h3>Chat</h3>
+        <h2>
+        <a href="clan/{{clan.id}}">{{clan.name}}</a>
+        </h2>
+        <p>
+            <span> </span>
+
+        </p>
       </div>
 
       <!-- Group -->
