Changed link in login form/Deployed to heroku

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,7 +20,7 @@
 
           <button type="submit" class="btn"></button>
           <div class="login-register">
-            <p>Don't have an account? <a href="http://localhost:3001/signUp" class="register-link">Register</a></p>
+            <p>Don't have an account? <a href="https://unifiedgg.herokuapp.com/signUp" class="register-link">Register</a></p>
           </div>
 
 
