--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     </header>
 <div class="container">
       
-      <div class="card cardlogin">
+      <div class="card cardlogin" style="z-index:1000;">
         
         <h2>GG WP HF GL</h2>
         <form id="login-form">
